fix default color for vscode dark mode

--- a/src/inspect_viz/_widgets/mosaic.css
+++ b/src/inspect_viz/_widgets/mosaic.css
@@ -69,3 +69,7 @@ label>input[type="range"] {
 .mosaic-widget .slider-input .slider-value {
     margin: 0;
 }
+
+.vscode-dark .mosaic-widget {
+    color: rgb(52, 58, 64);
+}
